# profiles-mcp

./: .env.sample  .gitignore  .gitleaksignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  test.yml
docs/: bedrock-setup.md
memory-bank/: PILOT_DATES_FEATURE.md  architecture_overview.md
scripts/: bedrock_anthropic_wrapper.sh  bootstrap_env.py  configure_llm_provider.py  env_setup.py  generate_company_context.py  setup_bedrock_container.sh  start.sh.template  test_bedrock.py  update_cline_for_bedrock.py  update_mcp_config.py
src/: bedrock_client.py  constants.py  logger.py  main.py
src/bedrock/: __init__.py  cline_adapter.py
src/tools/: about.py  bigquery.py  databricks.py  docs.py  execution_backends.py  pb_query_warehouse.py  profiles.py  redshift.py  snowflake.py  unified_warehouse.py  warehouse_base.py  warehouse_factory.py
src/utils/: analytics.py  environment.py  pb_config_parser.py  pb_models_parser.py  rag_search_api.py  rudderstack_api.py
src/validators/: propensity_validator.py
tests/: README.md  conftest.py  evaluator.py  prompts.py  run_tests.py  test_constants.py  test_pb_models_parser.py  test_propensity_validator.py  test_version_comparison.py
tests/integration/: test_warehouses_real.py
tests/unit/: test_analytics.py  test_pb_query_backend.py  test_pb_query_strategies.py  test_pb_query_warehouse.py  test_unified_warehouse.py  test_warehouse_base.py  test_warehouse_implementations.py  test_warehouse_manager_modes.py
